--- a/themes/newlook/components/mobile-profile-renderer/mobile-profile-renderer.css
+++ b/themes/newlook/components/mobile-profile-renderer/mobile-profile-renderer.css
@@ -1,3 +1,6 @@
+:host{
+  margin-top:19px;
+}
 .card-body img{
   float:left;
   margin-right: 10px;
@@ -9,6 +12,6 @@
 }
 
 .profile{
-  padding: 5px;
+  padding-left: 20px;
 }
 
