--- a/themes/newlook/components/app-menu/app-menu.css
+++ b/themes/newlook/components/app-menu/app-menu.css
@@ -10,3 +10,12 @@ padding:.5rem 1rem .5rem 0;
 .navbar-brand{
   padding: 5px;
 }
+
+.navbar-toggler{
+  position: fixed;
+  top:0;
+  right:0;
+  margin:25px 8px 0 0 ;
+  border:none;
+  color:#fff;
+}
