--- a/themes/newlook/components/psk-page-not-found-renderer/psk-page-not-found-renderer.css
+++ b/themes/newlook/components/psk-page-not-found-renderer/psk-page-not-found-renderer.css
@@ -1,1 +1,39 @@
 @import url("../../assets/bootstrap/css/bootstrap.min.css");
+.container{
+    position: relative;
+    left: 10rem;
+    background-image: url('/themes/newlook/components/psk-card/404.png');
+    background-repeat: no-repeat;
+    background-size: 200px;
+    background-position:top;
+    padding-top: 130px;
+    margin-top:5rem;
+}
+.card .card-header{
+    font-size:2.3125rem;
+    color:#F44336;
+    font-weight: bold;
+    text-align:center;
+    background-color: transparent;
+    border:none;
+    padding-bottom: 0;
+}
+.card .card-body{
+    font-size:1.3125rem;
+    text-align: center;
+    border:none;
+    padding-top:0;
+}
+.card{
+    border:none;
+}
+
+@media(max-width:960px){
+    .container{
+        left:0px;
+    }
+    .card .card-body p,
+    .card .card-header h5{
+        font-size: 70%;
+    }
+}
