--- a/themes/newlook/components/psk-default-renderer/psk-default-renderer.css
+++ b/themes/newlook/components/psk-default-renderer/psk-default-renderer.css
@@ -32,11 +32,9 @@ aside {
 }
 
 aside .hydrated{
+  margin-top:10px;
   display:flex;
   flex-direction: column;
-  justify-content: safe center;
-
-
 }
 
 .nav-footer{
