--- a/themes/newlook/components/psk-toc/psk-toc.css
+++ b/themes/newlook/components/psk-toc/psk-toc.css
@@ -31,10 +31,6 @@
     color:#4C71DE;
 }
 
-.table-of-content .card-body span:hover{
-    font-weight: 600;
-}
-
 .table-of-content .psk-card ul{
     padding-left:20px;
     padding-top:0px;
@@ -48,8 +44,6 @@
 }
 
 .table-of-content ul li ul li {
-    font-style: italic;
-    font-weight: 300;
     color:#4C71DE;
 }
 
@@ -70,6 +64,11 @@
     margin-right:2px;
     margin-left:-16px;
    
+}
+.table-of-content .card-body li span:hover
+{
+    color:#00289c;
+    font-weight: 500;
 }
 
 
