--- a/themes/newlook/components/psk-user-profile-renderer/psk-user-profile-renderer.css
+++ b/themes/newlook/components/psk-user-profile-renderer/psk-user-profile-renderer.css
@@ -3,7 +3,7 @@
 
 .card-body.text-center{
   padding-top:15%;
-  padding-bottom: 0;
+  padding-bottom: 15%;
   display:grid;
   grid-template-columns: 60px 1fr;
   text-align: left !important;
