--- a/themes/newlook/components/psk-page/psk-page.css
+++ b/themes/newlook/components/psk-page/psk-page.css
@@ -15,7 +15,7 @@
     color: #565656;
     margin-right: 20rem;
     width: auto;
-    padding:0 60px;
+    padding:0 60px 30px;
 }
 
 @media(max-width:960px){
