--- a/themes/newlook/components/psk-toc/psk-toc.css
+++ b/themes/newlook/components/psk-toc/psk-toc.css
@@ -34,6 +34,7 @@
 .table-of-content .psk-card ul{
     padding-left:20px;
     padding-top:0px;
+    padding-bottom: 0px;
 }
 
 .table-of-content .psk-card ul li {
