update page padding

--- a/themes/newlook/components/psk-table/psk-table.css
+++ b/themes/newlook/components/psk-table/psk-table.css
@@ -9,7 +9,8 @@ table{
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
-    font-size: 1rem;;
+    font-size: 1rem;
+    margin:1rem 0 0.5rem;
 }
 thead{
     background: rgb(94,127,225);
@@ -19,12 +20,12 @@ thead{
 }
 
 tbody{
-    background-color: #f5f5ff;
+    background-color: #eceff1;
     color:#565656;
 }
 
 tfoot{
-    background-color: #f5f5ff;
+    background-color: #eceff1;
     color:#565656;
     font-weight: bold;
     font-style: italic;
