--- a/themes/newlook/components/psk-card/psk-card.css
+++ b/themes/newlook/components/psk-card/psk-card.css
@@ -1,5 +1,6 @@
 .card.psk-card,
-.image_container {
+.image_container,
+.psk-description {
     background: none;
     border: none;
     padding:20px 0px 10px;
@@ -7,9 +8,6 @@
 
 .card.psk-card .psk-description{
     padding:0;
-}
-.image_wrapper{
-    padding-top: 10px;
 }
 
 .psk-card p{
@@ -19,9 +17,12 @@
 
 .psk-card p,
 .psk-card li,
-.psk-card .card-body,
-.psk-card .card-header {
+.psk-card .card-body {
     text-align: justify;
+}
+
+.card.psk-card .card.psk-card {
+    padding:0.5rem 0;
 }
 
 /** first level*/
@@ -29,12 +30,12 @@
 .psk-card .card-header{
     background: none;
     border-bottom: none;   
-    padding:10px 0 0;
+    padding: 0.5rem 0px;
     
 }
 
 .psk-card .card-header h5 {
-    font-size:1.3125rem;
+    font-size:1.266rem;
     font-weight: bold;
     color:#5E7FE1;
     margin:0;
@@ -42,32 +43,34 @@
 
 .psk-card h1{
     color:#354F9B;
-    font-size:2.3125rem;
+    font-size:1.424rem;
     font-weight: bold;
 }
 
 /** second level*/
 
- .psk-card .psk-card .card-header h5{
+.psk-card .psk-card .card-header{
+    padding:0.5rem 0 0;
+}
+.psk-card .psk-card .card-header h5{
     color:#565656;
-    font-weight: bold;
-    font-size: 1rem;
+    font-weight: 500;
+    font-size: 1.125rem;
 } 
 
 
 .psk-card .card-body{
-    padding:10px 0 0;
+    padding:0.5rem 0px 0px;
     line-height: 1.6;
     font-size: 1rem;
 }
 
 .psk-card .card-body div{
-    padding-top:16px;
+    padding-top:0.5rem;
 }
 
 .psk-card p.subtitle {
     color:#008A64;
-    margin-top: -10px;
 }
 
 /* Note coponent rules for b tag / b-tag needs to be replaced*/
@@ -119,7 +122,7 @@
     font-size:1.125rem;
     color:#354F9B;
     border-bottom: 2px solid #354F9B;
-    padding-bottom:8px;
+    padding-bottom:0.5rem;
 }
 
 .table-of-content .card-body span
@@ -157,8 +160,9 @@
 .psk-card ul,
 .psk-card ol
 {
- padding-top:16px;
- padding-bottom: 16px;
+ padding-top:0.5rem;
+ padding-bottom: 0.5rem;
+ margin:0;
 }
 
 
@@ -177,6 +181,14 @@
     margin-right: 0.5rem; 
     text-align: right; 
     direction: rtl;
+}
+
+.psk-card li{
+    padding:0.5rem 0 0;
+}
+
+.psk-card li li{
+    padding:0px;
 }
 
 /* buttons */
@@ -201,14 +213,14 @@
 /* page not-available */
 
 .psk-card#not-available .card-header h5{
-    font-size:2.3125rem;
+    font-size:1.802rem;
     color:#F44336;
     font-weight: bold;
     text-align:center;
 }
 
 .psk-card#not-available .card-body{
-    font-size:1.3125rem;
+    font-size:1.266rem;
     text-align: center;
 }
 
@@ -228,6 +240,7 @@
      position: static;
      margin:0 auto;
      padding-bottom: 0;
+     height:auto;
     }
     .table-of-content .card-body span{
         font-size: 0.875rem;
@@ -238,7 +251,8 @@
     }
 
     .card.psk-card,
-    .image_container {
+    .image_container,
+    .psk-description {
         padding:20px 5px 5px;
     } 
       /** first level*/
@@ -254,19 +268,20 @@
     /** second level*/
      .psk-card .psk-card .card-header h5{
         font-size: 0.875rem;
+        font-weight: bold;
     } 
     .psk-card .card-body{
         padding:5px 0px;
         font-size: 0.875rem;
     }
     .psk-card .card-body div{
-        padding-top:8px;
+        padding-top:0.5rem;
     }
     .psk-card#not-available{
         left:0;
     }
     .psk-card#not-available .card-header h5{
-        font-size: 1.3125rem;
+        font-size: 1.266rem;
     }
     .psk-card#not-available .card-body{
         font-size: 1rem;
