--- a/themes/newlook/components/app-menu/app-menu.css
+++ b/themes/newlook/components/app-menu/app-menu.css
@@ -4,18 +4,18 @@
 }
 
 .navbar {
-padding:.5rem 1rem .5rem 0;
+padding:0;
 }
 
 .navbar-brand{
-  padding: 5px;
+  display: none;
 }
 
 .navbar-toggler{
   position: fixed;
   top:0;
   right:0;
-  margin:32px 8px 0 0 ;
+  margin:10px 8px 0 0 ;
   border:none;
   color:#fff;
 }
