--- a/themes/newlook/components/app-menu/app-menu.css
+++ b/themes/newlook/components/app-menu/app-menu.css
@@ -1,4 +1,4 @@
-@import url("/themes/newlook/assets/bootstrap/css/bootstrap.min.css");
+@import url("../../assets/bootstrap/css/bootstrap.min.css");
 :host{
   width: 100%;
 }
