--- a/themes/newlook/components/psk-chapter/psk-chapter.css
+++ b/themes/newlook/components/psk-chapter/psk-chapter.css
@@ -1,2 +1,2 @@
-@import url("/themes/newlook/assets/fonts/font-awesome.min.css");
-@import url("/themes/newlook/assets/bootstrap/css/bootstrap.min.css");
+@import url("../../assets/fonts/font-awesome.min.css");
+@import url("../../assets/bootstrap/css/bootstrap.min.css");
