--- a/themes/newlook/components/psk-floating-menu/psk-floating-menu.css
+++ b/themes/newlook/components/psk-floating-menu/psk-floating-menu.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url(../../../assets/css/font-awesome.min.css);
+@import url("../../assets/fonts/font-awesome.min.css");
 #backdrop {
     position: fixed;
     top: 0;
