--- a/themes/newlook/components/psk-page/psk-page.css
+++ b/themes/newlook/components/psk-page/psk-page.css
@@ -1,5 +1,5 @@
-@import url("/themes/newlook/assets/fonts/font-awesome.min.css");
-@import url("/themes/newlook/assets/bootstrap/css/bootstrap.min.css");
+@import url("../../assets/fonts/font-awesome.min.css");
+@import url("../../assets/bootstrap/css/bootstrap.min.css");
  * {
     outline: none !important;
     background: #fff;
