--- a/themes/newlook/components/sidebar-renderer/sidebar-renderer.css
+++ b/themes/newlook/components/sidebar-renderer/sidebar-renderer.css
@@ -1,5 +1,5 @@
-@import url(../../assets/fonts/font-awesome.min.css);
-@import url(../../assets/bootstrap/css/bootstrap.min.css);
+@import url("../../assets/fonts/font-awesome.min.css");
+@import url("../../assets/bootstrap/css/bootstrap.min.css");
 
 :host{
   width:100%;
