--- a/themes/newlook/components/psk-toc/psk-toc.css
+++ b/themes/newlook/components/psk-toc/psk-toc.css
@@ -1,4 +1,4 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css");
+
 .table-of-content{
     width:20rem;
     position: fixed;
@@ -33,7 +33,7 @@
 }
 
 .table-of-content .psk-card ul{
-    padding-left:20px;
+    padding-left:24px;
     padding-top:0px;
     padding-bottom: 0px;
 }
@@ -61,12 +61,17 @@
 .table-of-content  .card-body > ul > li:first-of-type::before,
 .table-of-content  .card-body > ul li.current_view
 {
-    font-family:"FontAwesome";
-    content:"\f0a4";
-    color:#354F9B;
-    font-size: 1rem;
-    margin-right:2px;
-    margin-left:-16px;
+    content: "";
+    background-image:url(../../assets//img/hand-point.svg);
+    background-size: 100% 100%;
+    display: inline-block;
+    height: 20px;
+    width:20px;
+    filter: invert(31%) sepia(9%) saturate(4329%) hue-rotate(188deg) brightness(92%) contrast(93%);
+    position: relative;
+    margin-left: -24px;
+    margin-right: 4px;
+    bottom: -5px;
 }
 .table-of-content .card-body li span:hover
 {
