--- a/themes/newlook/components/psk-card/psk-card.css
+++ b/themes/newlook/components/psk-card/psk-card.css
@@ -232,7 +232,7 @@ ol li::before {
 .psk-card#not-available {
     position: relative;
     left: 10rem;
-    background-image: url(../../assets//img/404.png);
+    background-image: url(../../../../assets/images/404.png);
     background-repeat: no-repeat;
     background-size: 200px;
     background-position: top;
