--- a/themes/newlook/components/psk-toc/psk-toc.css
+++ b/themes/newlook/components/psk-toc/psk-toc.css
@@ -59,7 +59,7 @@
 .table-of-content  .card-body > ul li.current_view
 {
     content: "";
-    background-image:url(../../assets//img/hand-point.svg);
+    background-image:url(../../../../assets/images/hand-point.svg);
     background-size: 100% 100%;
     display: inline-block;
     height: 20px;
