--- a/themes/newlook/components/sidebar-renderer/sidebar-renderer.css
+++ b/themes/newlook/components/sidebar-renderer/sidebar-renderer.css
@@ -38,7 +38,7 @@ a,
  /* adding pointer */
 a.active .item_name::before{
   content: "";
-    background-image:url(../../assets//img/hand-point.svg);
+    background-image:url(../../../../assets/images/hand-point.svg);
     background-size: 100% 100%;
     display: inline-block;
     height: 20px;
