--- a/themes/newlook/components/psk-page-not-found-renderer/psk-page-not-found-renderer.css
+++ b/themes/newlook/components/psk-page-not-found-renderer/psk-page-not-found-renderer.css
@@ -1,8 +1,7 @@
 @import url(../../../commons/bootstrap/css/bootstrap.min.css);
 .container {
     position: relative;
-    left: 10rem;
-    background-image: url('/themes/newlook/components/psk-card/404.png');
+    background-image: url(../../../../assets/images/404.png);
     background-repeat: no-repeat;
     background-size: 200px;
     background-position: top;
@@ -10,18 +9,22 @@
     margin-top: 5rem;
 }
 
+
 .card .card-header {
-    font-size: 2.3125rem;
-    color: #F44336;
-    font-weight: bold;
-    text-align: center;
     background-color: transparent;
     border: none;
     padding-bottom: 0;
 }
 
+.card .card-header h2{
+    font-size: 1.802rem;
+    color: #F44336;
+    font-weight: bold;
+    text-align: center;
+}
+
 .card .card-body {
-    font-size: 1.3125rem;
+    font-size: 1.266rem;
     text-align: center;
     border: none;
     padding-top: 0;
