--- a/themes/newlook/components/psk-ui-loader/psk-ui-loader.css
+++ b/themes/newlook/components/psk-ui-loader/psk-ui-loader.css
@@ -1,5 +1,4 @@
 .sk-fading-circle {
-    margin: auto;
     width: 40px;
     height: 60px;
     position: relative;
@@ -169,7 +168,17 @@
 }
 
 .loader-container {
-    height: 100%;
+    height: 75vh;
+    position:relative;
+    left:10rem;
     min-height: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media(max-width:960px) {
+    .loader-container {
+        position: static;
+    }
 }
