--- a/themes/newlook/components/psk-card/psk-card.css
+++ b/themes/newlook/components/psk-card/psk-card.css
@@ -201,6 +201,7 @@ ol li::before {
     border-style: none;
     box-shadow: rgba(76, 113, 222, 0.35) 0px 18px 25px -12px;
     padding: 8px 16px;
+    margin-bottom: 10px;
 }
 
 .btn.btn-primary:focus,
