--- a/themes/newlook/components/psk-page/psk-page.css
+++ b/themes/newlook/components/psk-page/psk-page.css
@@ -47,10 +47,10 @@ nav h3 {
         padding: 0 15px;
     }
     nav{
-        height:60px;
+        height:auto;
     }
     nav h3 {
-        padding: 0 15px;
+        padding: 10px 15px;
         font-size: 1.266rem;
         line-height: 1.3;
     }
