--- a/themes/newlook/components/psk-page-not-found-renderer/psk-page-not-found-renderer.css
+++ b/themes/newlook/components/psk-page-not-found-renderer/psk-page-not-found-renderer.css
@@ -1,6 +1,6 @@
 @import url(../../../commons/bootstrap/css/bootstrap.min.css);
 .container {
-    position: relative;
+    position: absolute;
     background-image: url(../../../../assets/images/404.png);
     background-repeat: no-repeat;
     background-size: 200px;
