--- a/themes/newlook/components/psk-button/psk-button.css
+++ b/themes/newlook/components/psk-button/psk-button.css
@@ -21,7 +21,7 @@
 
 /* first page */
 
-.btn.btn-primary {
+:host-context(.actions) .btn.btn-primary {
     background-color: transparent;
     color: #354F9B;
     font-weight: 700;
@@ -29,14 +29,16 @@
     width: 200px;
 }
 
-.btn.btn-primary:hover {
+:host-context(.actions) .btn.btn-primary:hover {
     background-color: #5E7FE1;
     border-style: none;
     color: #fff;
+    font-weight:600;
+    box-shadow: rgb(76, 100, 100, 0.3) 5px 0px 20px -3px;
 }
 
 @media(max-width:960px) {
-    .btn.btn-primary {
+    :host-context(.actions) .btn.btn-primary {
         font-size: 1rem;
         padding: 5px;
     }
