--- a/themes/newlook/components/psk-page-not-found-renderer/psk-page-not-found-renderer.css
+++ b/themes/newlook/components/psk-page-not-found-renderer/psk-page-not-found-renderer.css
@@ -1,14 +1,15 @@
 @import url(../../../commons/bootstrap/css/bootstrap.min.css);
+
 .container {
-    position: absolute;
+    position: relative;
+    transform: translateX(10rem);
     background-image: url(../../../../assets/images/404.png);
     background-repeat: no-repeat;
     background-size: 200px;
     background-position: top;
     padding-top: 130px;
-    margin-top: 5rem;
+    margin-top: 5rem;  
 }
-
 
 .card .card-header {
     background-color: transparent;
