--- a/themes/newlook/components/psk-img/psk-img.css
+++ b/themes/newlook/components/psk-img/psk-img.css
@@ -7,4 +7,16 @@
     padding: 10px;
     font-style: italic;
     font-size: 1rem;
+    margin-bottom: 1rem;
+}
+.image_description::before{
+    content:"- ";
+}
+.image_description::after{
+    content:" -";
+}
+
+.image_wrapper{
+    margin-bottom: 1.5rem;
+    margin-top:1.5rem;
 }
