--- a/themes/newlook/components/psk-button/psk-button.css
+++ b/themes/newlook/components/psk-button/psk-button.css
@@ -2,9 +2,10 @@
 .btn.btn-primary {
     background-color: #4C71DE;
     border-style: none;
-    box-shadow: rgba(76, 113, 222, 0.35) 0px 18px 25px -12px;
+    box-shadow: rgba(53, 79, 155, 0.35) 0px 15px 30px -12px;
     padding: 8px 16px;
     margin: 10px;
+    border-radius: 5px;
 }
 
 .btn.btn-primary:focus,
@@ -16,6 +17,7 @@
 .btn.btn-primary:hover {
     background-color: #5E7FE1;
     border-style: none;
+    box-shadow: none;
 }
 
 
@@ -27,6 +29,7 @@
     font-weight: 700;
     font-size: 1.3125rem;
     width: 200px;
+    border-radius: 0;
 }
 
 :host-context(.actions) .btn.btn-primary:hover {
