--- a/themes/newlook/components/psk-page-not-found-renderer/psk-page-not-found-renderer.css
+++ b/themes/newlook/components/psk-page-not-found-renderer/psk-page-not-found-renderer.css
@@ -1,6 +1,6 @@
 @import url(../../../commons/bootstrap/css/bootstrap.min.css);
 
-.container {
+div.container {
     position: relative;
     transform: translateX(10rem);
     background-image: url(../../../../assets/images/404.png);
@@ -10,6 +10,13 @@
     padding-top: 130px;
     margin-top: 5rem;  
 }
+:host-context(psk-example)>.container{
+    transform: translateX(0);
+}
+:host-context(psk-container)>.container{
+    transform: translate(10rem);
+}
+
 
 .card .card-header {
     background-color: transparent;
