--- a/themes/newlook/components/psk-button/psk-button.css
+++ b/themes/newlook/components/psk-button/psk-button.css
@@ -4,7 +4,7 @@
     border-style: none;
     box-shadow: rgba(53, 79, 155, 0.35) 0px 15px 30px -12px;
     padding: 8px 16px;
-    margin: 10px;
+    margin-right: 10px;
     border-radius: 5px;
 }
 
