--- a/themes/newlook/components/psk-card/psk-card.css
+++ b/themes/newlook/components/psk-card/psk-card.css
@@ -116,6 +116,7 @@
 .table-of-content .psk-card .card-header {
     padding-left: 0;
     padding-right: 40px;
+    padding-bottom: 0;
 }
 
 .table-of-content .psk-card {
