--- a/themes/newlook/components/psk-modal/psk-modal.css
+++ b/themes/newlook/components/psk-modal/psk-modal.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(10, 20, 50, 0.5);
     z-index: 99998;
     opacity: 0;
     pointer-events: none;
@@ -28,7 +28,6 @@
     width: 50%;
     z-index: 99999;
     background: white;
-    border-radius: 3px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
@@ -36,26 +35,31 @@
     opacity: 0;
     pointer-events: none;
     transition: all 0.3s ease-out;
+    border-radius:5px;
 }
-
-header {
-    padding: 1rem;
-    border-bottom: 1px solid #ccc;
+::slotted(h3){
+    margin-top:1.5rem !important;
+    margin-left: auto;
+    font-size: 1.37rem !important;
+    color:#4C71DE;
 }
-
-::slotted(h1) {
-    font-size: 1.25rem;
-    margin: 0;
-    color: rgba(75, 75, 93, 0.85);
+.modal-header{
+    border:none;
+    padding:2rem 2rem 0.5rem;
 }
-
+.modal-body{
+    padding:0 3rem;
+}
+.modal-footer{
+    border:none;
+    padding:0 4rem 1rem;
+}
 #main {
     padding: 1rem;
 }
 
 #actions {
-    border-top: 1px solid #ccc;
-    padding: 1rem;
+    padding: 2rem;
     display: flex;
     justify-content: flex-end;
 }
@@ -74,5 +78,8 @@ header {
     }
     #actions {
         padding: 2rem;
+    }
+    .modal-content{
+        margin-bottom: 1rem;
     }
 }
