--- a/themes/newlook/components/psk-pin-popup/psk-pin-popup.css
+++ b/themes/newlook/components/psk-pin-popup/psk-pin-popup.css
@@ -1,1 +1,6 @@
-@import url(../../../commons/bootstrap/css/bootstrap.min.css);
+@import url(../../../commons/bootstrap/css/bootstrap.min.css); 
+
+input#pin:focus{
+    border-color:#fff;
+    box-shadow: 0px 0px 6px 1px rgba(76,113,222,1);
+}
