scroll bar bug fixed

--- a/themes/newlook/components/psk-card/psk-card.css
+++ b/themes/newlook/components/psk-card/psk-card.css
@@ -101,7 +101,7 @@
 .table-of-content {
     width: 20rem;
     position: fixed;
-    right: 0;
+    right: 6px;
     top: 125px;
     height: 80vh;
     overflow: auto;
