--- a/themes/newlook/components/psk-toc/psk-toc.css
+++ b/themes/newlook/components/psk-toc/psk-toc.css
@@ -1,7 +1,7 @@
 .table-of-content {
     width: 20rem;
     position: fixed;
-    right: 0;
+    right: 6px;
     top: 125px;
     overflow: auto;
 }
