--- a/themes/newlook/components/psk-code/psk-code.css
+++ b/themes/newlook/components/psk-code/psk-code.css
@@ -1,5 +1,5 @@
 /* PrismJS 1.19.0
-https://prismjs.com/download.html#themes=prism-coy&languages=markup+css+clike+javascript+json+jsx+tsx+regex+typescript */
+https://prismjs.com/download.html#themes=prism-coy&languages=markup+css+clike+javascript+bash+json+json5+jsx+tsx+shell-session+typescript */
 /**
  * prism.js Coy theme for JavaScript, CoffeeScript, CSS and HTML
  * Based on https://github.com/tshedor/workshop-wp-theme (Example: http://workshop.kansan.com/category/sessions/basics or http://workshop.timshedor.com/category/sessions/basics);
@@ -38,8 +38,8 @@ https://prismjs.com/download.html#themes=prism-coy&languages=markup+css+clike+ja
  }
  pre[class*="language-"]>code {
      position: relative;
-     border-left: 10px solid #5E7FE1;
-     box-shadow: -1px 0px 0px 0px #5E7FE1, 0px 0px 0px 1px #dfdfdf;
+     border-left: 10px solid #358ccb;
+     box-shadow: -1px 0px 0px 0px #358ccb, 0px 0px 0px 1px #dfdfdf;
      background-color: #fdfdfd;
      background-image: linear-gradient(transparent 50%, rgba(69, 142, 209, 0.04) 50%);
      background-size: 3em 3em;
