--- a/themes/newlook/components/psk-card/psk-card.css
+++ b/themes/newlook/components/psk-card/psk-card.css
@@ -48,7 +48,7 @@
 }
 
 
-/** second level*/
+/* second level */
 
 .psk-card .psk-card .card-header {
     padding: 0.5rem 0 0;
@@ -59,6 +59,9 @@
     font-weight: 600;
     font-size: 1.125rem;
 }
+
+
+/* any level */
 
 .psk-card .card-body {
     padding: 0.5rem 0px 0px;
@@ -72,6 +75,17 @@
 
 .psk-card p.subtitle {
     color: #008A64;
+}
+
+.api-title .psk-card h5 {
+    /* Used max-content value to have backgroud-color only for content, not for entire occupied space */
+    width: max-content;
+    background-color: rgba(0, 138, 100, 0.2);
+}
+
+.api-subtitle .psk-card .card-header h5 {
+    color: #008a64;
+    background-color: initial;
 }
 
 
@@ -148,8 +162,8 @@
     text-align: left;
 }
 
-.table-of-content .psk-card ul ul li::before{
-    content:"";
+.table-of-content .psk-card ul ul li::before {
+    content: "";
 }
 
 
@@ -169,16 +183,19 @@
 .psk-card ul,
 .psk-card ol {
     padding-bottom: 0.5rem;
-    padding-top:0.5rem;
+    padding-top: 0.5rem;
     margin: 0;
 }
-.psk-card ul ul{
+
+.psk-card ul ul {
     list-style: none;
 }
-.psk-card ul ul li::before{
-    content:"-";
+
+.psk-card ul ul li::before {
+    content: "-";
     font-weight: 600;
 }
+
 .psk-card ol {
     counter-reset: li;
     list-style-type: none;
@@ -203,6 +220,7 @@ ol li::before {
 .psk-card li li {
     padding: 0px;
 }
+
 
 /* page not-available */
 
@@ -229,7 +247,7 @@ ol li::before {
     margin-top: 5rem;
 }
 
-@media(max-width:960px) {
+@media (max-width: 960px) {
     .table-of-content {
         position: static;
         margin: 0 auto;
@@ -242,10 +260,10 @@ ol li::before {
     .table-of-content .psk-card ul {
         margin: 0;
         padding-bottom: 0;
-        padding-left:2px;
+        padding-left: 2px;
     }
-    .table-of-content  .card-body > ul > li:first-of-type::before,
-    .table-of-content  .card-body > ul li.current_view{
+    .table-of-content .card-body>ul>li:first-of-type::before,
+    .table-of-content .card-body>ul li.current_view {
         display: none;
     }
     .card.psk-card,
