Fixed psk-toc issues + created a scrollable table of contents - live update on active chapter

--- a/themes/newlook/components/psk-toc/psk-toc.css
+++ b/themes/newlook/components/psk-toc/psk-toc.css
@@ -19,51 +19,45 @@
 .table-of-content .psk-card .card-header h5 {
     font-weight: bold;
     font-size: 1.125rem;
-    color: #354F9B;
-    border-bottom: 2px solid #354F9B;
+    color: #354f9b;
+    border-bottom: 2px solid #354f9b;
     padding-bottom: 8px;
 }
 
-.table-of-content .card-body span {
-    font-size: 1rem;
-    color: #4C71DE;
-}
-
-.table-of-content .psk-card ul{
-    padding-left:24px;
-    padding-top:0px;
+.table-of-content .psk-card ul {
+    padding-left: 24px;
+    padding-top: 0px;
     padding-bottom: 0px;
 }
 
-.table-of-content .psk-card ul li {
+.table-of-content .psk-card li {
+    font-size: 1rem;
+    color: #4c71de;
     list-style: none;
     cursor: pointer;
-    text-decoration: none !important;
+    text-decoration: none;
     padding-top: 5px;
 }
 
-.table-of-content ul li ul li {
-    color: #4C71DE;
+.table-of-content .psk-card li:hover {
+    color: #0029b4;
 }
 
-.table-of-content ul li ul li ul li {
+.table-of-content li li li {
     font-size: 90%;
-    color: #4C71DE;
 }
 
-.table-of-content ul li::before {
+.table-of-content li::before {
     content: "";
 }
 
-.table-of-content  .card-body > ul > li:first-of-type::before,
-.table-of-content  .card-body > ul li.current_view
-{
+.table-of-content .psk-card li.active::before {
     content: "";
-    background-image:url(../../../../assets/images/hand-point.svg);
+    background-image: url(../../../../assets/images/hand-point.svg);
     background-size: 100% 100%;
     display: inline-block;
     height: 20px;
-    width:20px;
+    width: 20px;
     filter: invert(31%) sepia(9%) saturate(4329%) hue-rotate(188deg) brightness(92%) contrast(93%);
     position: relative;
     margin-left: -24px;
@@ -71,6 +65,8 @@
     bottom: -5px;
 }
 
-.table-of-content .card-body li span:hover {
-    color: #0029b4;
+.table-of-content .psk-card li.active {
+    font-weight: bold;
+    font-style: italic;
+    text-decoration: underline #ff0000 solid;
 }
