--- a/themes/newlook/components/psk-toc/psk-toc.css
+++ b/themes/newlook/components/psk-toc/psk-toc.css
@@ -4,7 +4,6 @@
     right: 6px;
     top: 125px;
     overflow: auto;
-    z-index: 10000;
 }
 
 .table-of-content .psk-card .card-body,
@@ -44,11 +43,11 @@
     color: #0029b4;
 }
 
-.table-of-content .psk-card li li li {
+.table-of-content li li li {
     font-size: 0.75rem;
 }
 
-.table-of-content .psk-card li::before {
+.table-of-content li::before {
     content: "";
 }
 
@@ -70,10 +69,7 @@
     font-weight: bold;
     color: #354F9B;
 }
-
-
 /* bold only on arrow */
-
-.table-of-content .psk-card li.active li {
+.table-of-content .psk-card li.active li{
     font-weight: normal;
 }
